--- a/css/new_style.css
+++ b/css/new_style.css
@@ -1,9 +1,10 @@
-.inner{
-  overflow: hidden;
+@import url(https://fonts.googleapis.com/css?family=Exo:100);
+ .inner {
+	 overflow: hidden;
 }
-.inner img{
-  transition: all 1.5s ease;
+ .inner img {
+	 transition: all 1.5s ease;
 }
-.inner:hover img{
-  transform: scale(1.5);
+ .inner:hover img {
+	 transform: scale(1.5);
 }
